fixed mobile css sub header align

--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,5 @@
 
 .h4 {
     margin-top: 0;
+    text-align: center;
 }
